# Portcullis

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  captcha.dev.toml  captcha.toml  captcha.toml.example  docker-compose.build.yml  docker-compose.yml  package.json
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
admin-ui/: Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.tsbuildinfo  vite.config.ts
admin-ui/src/: App.tsx  index.css  main.tsx
admin-ui/src/components/: ConfirmDialog.tsx  ErrorBoundary.tsx  Spinner.tsx
admin-ui/src/lib/: api.ts  utils.ts
admin-ui/src/pages/: Audit.tsx  Dashboard.tsx  Login.tsx  Logs.tsx  Risk.tsx  Security.tsx  Sites.tsx
crates/captcha-core/: Cargo.toml
crates/captcha-core/benches/: pow_bench.rs
crates/captcha-core/src/: challenge.rs  crypto.rs  difficulty.rs  lib.rs  pow.rs
crates/captcha-server/: Cargo.toml  build.rs
crates/captcha-server/src/: config.rs  db.rs  error.rs  lib.rs  main.rs  metrics.rs  rate_limit.rs  risk.rs  site_secret.rs  state.rs  static_assets.rs  token.rs
crates/captcha-server/src/admin/: audit.rs  auth.rs  dashboard.html  handlers.rs  mod.rs  path_check.rs  request_log.rs  webhook.rs
crates/captcha-server/src/routes/: challenge.rs  mod.rs  siteverify.rs  verify.rs
crates/captcha-server/src/store/: memory.rs  mod.rs
crates/captcha-server/tests/: integration.rs
crates/captcha-wasm/: Cargo.toml
crates/captcha-wasm/src/: lib.rs
docs/: AI_INTEGRATION_PROMPT.md  API_STABILITY.md  CAPTCHA_SDK_HARDENING.md  CODE_REVIEW_2026-05-12.md  DEPLOY.md  INTEGRATION.md  PROTOCOL.md  ROADMAP.md  SECURITY.md  TIER1_IMPLEMENTATION.md  TIER2_IMPLEMENTATION.md  UPGRADING.md  grafana-dashboard.json  openapi.yaml
docs/snippets/: README.md  csharp.md  go.md  java.md  nodejs.md  php.md  python.md  ruby.md
examples/: demo.html
examples/backend-node/: package.json  server.js
nginx/: nginx.conf
scripts/: build-all.ps1  build-all.sh  build-wasm.sh  dev.sh  gen-secret.sh  setup-env.ps1  setup-env.sh
sdk/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
sdk/src/: api.ts  auto-mount.ts  i18n.ts  index.ts  styles.ts  types.ts  widget.ts
