[package]
name = "captcha-core"
version = "1.2.3"
edition = "2021"
description = "PoW CAPTCHA 核心算法库：Argon2id + SHA-256 双阶段 PoW + HMAC 签名"

[dependencies]
argon2 = "0.5"
hmac = "0.12"
sha2 = "0.10"
subtle = "2"
serde = { version = "1", features = ["derive"] }
base64 = "0.22"

[dev-dependencies]
serde_json = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "pow_bench"
harness = false
