[package]
name = "captcha-server"
version = "1.2.0"
edition = "2021"

[dependencies]
captcha-core = { path = "../captcha-core" }

axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "limit", "set-header", "compression-gzip", "compression-br"] }
governor = "0.10"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
getrandom = "0.2"
dashmap = "6"
subtle = "2"
sha2 = "0.10"
ed25519-dalek = { version = "2", default-features = false, features = ["std", "fast"] }
rust-embed = { version = "8", features = ["mime-guess", "interpolate-folder-path"] }
rusqlite = { version = "0.31", features = ["bundled"] }
dotenvy = "0.15"
arc-swap = "1"
ipnet = "2"

metrics = "0.24"
metrics-exporter-prometheus = "0.16"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

[dev-dependencies]
captcha-core = { path = "../captcha-core" }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
base64 = "0.22"
tempfile = "3"
