[package]
name = "captcha-wasm"
version = "1.2.4"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
captcha-core = { path = "../captcha-core" }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
base64 = "0.22"
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["console_error_panic_hook"]
