[package]
name = "captcha-wasm"
version = "1.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
captcha-core = { path = "../captcha-core" }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
base64 = "0.22"
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["console_error_panic_hook"]

# wasm-pack 构建时传给内嵌 wasm-opt 的参数。
# -O4              最高优化等级 (wasm-opt 的 -Oz 等价)
# --strip-debug    删除 DWARF debug 段
# --strip-producers 删除 "producers" custom section (rustc / wasm-bindgen 版本标识)
# --vacuum         清理未引用的部分
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--strip-debug", "--strip-producers", "--vacuum"]
